# rasset

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  ci.yml
examples/: arrays.rs  assets.ron  assets.yaml  file.rs  files.rs  from_file.rs  no_macros.rs  simple.rs
macros/: Cargo.toml
macros/src/: lib.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: asset.rs  bundle.rs  compiler.rs  error.rs  lib.rs  metadata.rs  registry.rs  type.rs
template/: Cargo.toml  assets.ron  assets.yaml  build.rs
template/assets/: Cargo.toml
template/assets/src/: lib.rs
template/src/: main.rs
