[package]
name = "rasset"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["derive"] }
lazy_static = "1.5.0"
proc_macros = { path = "proc_macros" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
