[workspace]
resolver = "2"
members = [
    "macros",
]

[package]
name = "rasset"
description = "Rust Asset Management Library"
license = "MIT"
homepage = "https://github.com/LeviLovie/rasset"
repository = "https://github.com/LeviLovie/rasset"
documentation = "https://docs.rs/rasset"
version = "1.0.0-beta.1"
edition = "2024"

[dependencies]
macros = { version = "1.0.0-beta.1", path = "macros" }
bincode = { version = "2.0.1", features = ["serde"] }
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
