[package]
name = "rasset_macros"
description = "Macros for the Rust Asset Management Library"
homepage = "https://github.com/LeviLovie/rasset"
version = "1.0.0-beta.1"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
syn = { version = "2.0.102", features = ["full"] }
