[package]
name = "rasset_macros"
description = "Macros for the Rust Asset Management Library"
license = "MIT"
homepage = "https://github.com/LeviLovie/rasset"
version = "1.0.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
syn = { version = "2.0.102", features = ["full"] }
